<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Faceval</string>
    <string name="title_home">Home</string>
    <string name="title_history">History</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_take_photo">Faceval Camera</string>
    <string name="title_scoring">Faceval AI Portal</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be 5 to 20 characters without spaces</string>
    <string name="invalid_email">Not a valid email address</string>
    <string name="invalid_display">Not a valid nickname</string>
    <string name="conflict_username">This user ID has already been registered</string>
    <string name="invalid_confirm_password">The two passwords are not same</string>
    <string name="login_failed">"Login failed"</string>

    <string name="loading" tools:ignore="TypographyEllipsis">Loading...</string>

    <!-- Splash -->
    <string name="starting" tools:ignore="TypographyEllipsis">Faceval is starting...</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_login">Login Faceval</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Main fragment -->
    <string name="get_started">Take a new photo</string>

    <string name="eval_image">Eval image</string>
    <string name="score">Score: </string>

    <string name="title_text">This is a demo title</string>
    <string name="demo_score">8.6</string>
    <string name="demo_date">2021–4–22</string>

    <string name="avatar_description">Avatar of this user</string>
    <string name="demo_display_name">MacKenzie Hellman</string>
    <string name="demo_user_id">mhellman</string>

    <string name="title_profile">My Space</string>
    <string name="capture_image_description">Captured image</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">@android:string/cancel</string>
    <string name="notLoggedInYet">Sign in to explore Faceval! 🏂</string>
    <string name="username">User ID</string>
    <string name="register">Register</string>
    <string name="display_name">Nickname</string>
    <string name="register_prompt">Create your brand new account!</string>

    <string name="no_username">Please enter user ID</string>
    <string name="no_email">Please enter email</string>
    <string name="no_display_name">Please enter your nickname</string>
    <string name="no_password">Please enter password</string>
    <string name="password_not_same">The two passwords are not same</string>
    <string name="confirm_password">Confirm password</string>

    <string name="register_failed">Register failed</string>
    <string name="logout">Logout</string>
    <string name="best_score_prompt">My best score</string>
    <string name="signin_prompt">Sign in to explore!</string>
    <string name="signedin_prompt">Let\'s rock!</string>

    <string name="egg_emoji">🥚</string>
    <string name="chicken_emoji">🐣</string>
    <string name="nerd_emoji">🤓</string>
    <string name="covered_eyes_monkey_emoji">🙈</string>
    <string name="bunny_women_emoji">👯</string>
    <string name="cat_love_emoji">😻</string>
    <string name="scoring_prompt">Scoring…</string>

    <string name="logout_confirm_title">Do you really want to logout?</string>
    <string name="take_picture_prompt">Take a picture</string>
    <string name="pick_from_gallery_prompt">Pick one from gallery</string>
    <string name="please_wait">Please wait…</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="image_source_select">Select where to get an image</string>
    <string name="capture">Capture</string>

    <string name="camera_switch_to_front">Switch</string>
    <string name="camera_switch_to_back">Switch</string>
    <string name="camera_no_permission">Faceval Camera cannot work properly: no permission</string>
    <string name="camera_not_exists">Your phone has no cameras!</string>
    <string name="camera_load_failed">Cannot load camera</string>
    <string name="capture_failed">Image capture failed</string>
    <string name="capture_success">Image captured successfully</string>
    <string name="current_len_facing">%s camera is currently used</string>
    <string name="camera_front">Front</string>
    <string name="camera_back">Back</string>

    <string name="select_photo">Select a picture</string>
    <string name="image_load_failed">Failed to load the image</string>

    <string name="prepare">Preparing…</string>
    <string name="encoding">Processing image…</string>
    <string name="detecting">AI is detecting…</string>
    <string name="scoring">AI is scoring…</string>
    <string name="finished">Faceval AI: Scoring is finished! 🐒</string>

    <string name="confirm_upload">Really want to upload?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="uploading">Uploading…</string>
    <string name="saving">Saving…</string>
    <string name="no_record">No record 🙈</string>

    <string name="quit">Quit</string>
    <string name="take_photo_prompt">Take your first photo!</string>
    <string name="reading">Reading…</string>
    <string name="update_detail">Update details</string>
    <string name="no_title">Title</string>
    <string name="description">Description</string>
    <string name="delete">Delete</string>
</resources>