<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.login.RegisterActivity">

        <TextView
            android:id="@+id/registerEmoji"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/cat_love_emoji"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="34sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/registerPromptField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/register_prompt"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registerEmoji" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registerPromptField">

            <EditText
                android:id="@+id/userIdEntry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/username"
                android:ems="10"
                android:hint="@string/username"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/emailEntry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/prompt_email"
                android:ems="10"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/displayNameEntry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/display_name"
                android:ems="10"
                android:hint="@string/display_name"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/passwordEntry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/prompt_password"
                android:ems="10"
                android:hint="@string/prompt_password"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/passwordConfirmEntry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/confirm_password"
                android:ems="10"
                android:hint="@string/confirm_password"
                android:inputType="textPassword" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <Button
                android:id="@+id/cancelRegisterButton"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@android:string/cancel" />

            <Button
                android:id="@+id/registerActionButton"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/register" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>