<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="loginViewModel"
            type="com.chardon.faceval.android.ui.login.LoginViewModel" />
        <variable
            name="homeViewModel"
            type="com.chardon.faceval.android.ui.home.HomeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.home.HomeFragment">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/guide_frame"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/light_blue_600"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/aChicken"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/chicken_emoji"
                android:textColor="@color/gray_100"
                android:textSize="60sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/signinPrompt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                android:text="@string/signin_prompt"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/loginButtonHome"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/aChicken" />

            <Button
                android:id="@+id/loginButtonHome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/light_blue_800"
                android:text="@string/action_sign_in_short"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/getStartedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:padding="20dp"
            android:text="@string/get_started"
            app:layout_constraintBottom_toTopOf="@+id/statsFrame"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/guide_frame" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/statsFrame"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@android:color/holo_orange_dark"
            android:padding="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/aUnicorn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nerd_emoji"
                android:textColor="@color/gray_100"
                android:textSize="34sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/bestScoreLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:text="@string/best_score_prompt"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/aUnicorn" />

            <TextView
                android:id="@+id/scoreShowLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/demo_score"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="@+id/bestScoreLabel"
                app:layout_constraintStart_toStartOf="@+id/bestScoreLabel"
                app:layout_constraintTop_toBottomOf="@+id/bestScoreLabel" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>