<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="profileViewModel"
            type="com.chardon.faceval.android.ui.profile.ProfileViewModel" />
        <variable
            name="loginViewModel"
            type="com.chardon.faceval.android.ui.login.LoginViewModel" />
    </data>

    <LinearLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.profile.ProfileFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/loginPrompt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">

            <Button
                android:id="@+id/loginButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:paddingVertical="20dp"
                android:text="@string/action_sign_in_short"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/loginPromptText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:text="@string/notLoggedInYet"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="24sp"
                app:layout_constraintBottom_toTopOf="@+id/loginButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/headLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/avatarView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/avatar_description"
                android:maxWidth="80dp"
                android:minWidth="80dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@tools:sample/avatars" />

            <TextView
                android:id="@+id/displayNameLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/roboto"
                android:text="@string/demo_display_name"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/avatarView" />

            <TextView
                android:id="@+id/userIdLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/demo_user_id"
                app:layout_constraintEnd_toEndOf="@+id/displayNameLabel"
                app:layout_constraintStart_toStartOf="@+id/displayNameLabel"
                app:layout_constraintTop_toBottomOf="@+id/displayNameLabel" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="20dp"
            android:background="?android:attr/listDivider" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout
                android:id="@+id/optionFrame"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/logoutButton"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/logout" />
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

    </LinearLayout>
</layout>