<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.chardon.faceval.android.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_profile"
            app:destination="@id/navigation_profile" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_dashboard"
            app:destination="@id/navigation_history" />
    </fragment>
    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.chardon.faceval.android.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" >
        <action
            android:id="@+id/action_navigation_profile_to_loginActivity"
            app:destination="@id/navigation_login" />
        <action
            android:id="@+id/action_navigation_profile_to_settingsActivity2"
            app:destination="@id/navigation_settings" />
        <action
            android:id="@+id/action_navigation_profile_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>
    <fragment
        android:id="@+id/navigation_history"
        android:name="com.chardon.faceval.android.ui.dashboard.DashboardFragment"
        android:label="@string/title_history"
        tools:layout="@layout/fragment_dashboard" >
        <action
            android:id="@+id/action_navigation_dashboard_to_navigation_profile"
            app:destination="@id/navigation_profile" />
    </fragment>
    <activity
        android:id="@+id/navigation_login"
        android:name="com.chardon.faceval.android.ui.login.LoginActivity"
        android:label="activity_login"
        tools:layout="@layout/activity_login" />
    <activity
        android:id="@+id/navigation_settings"
        android:name="com.chardon.faceval.android.SettingsActivity"
        android:label="SettingsActivity" />

</navigation>